--- a/index.html
+++ b/index.html
@@ -162,13 +162,13 @@
                   data-fancybox="gallery">
                   <img alt="a blue sky with a lot of red and orange clouds"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
-                    src="dist/image/6.jpg" />
+                    src="6.jpg" />
                 </a>
               </div>
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="dist/image/7.jpg"
+                <a href="7.jpg"
                   data-fancybox="gallery">
                   <img alt="a view of the ocean from the top of a hill"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
@@ -178,7 +178,7 @@
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="dist/image/8.jpg"
+                <a href="8.jpg"
                   data-fancybox="gallery">
                   <img alt="a pheasant flying in the sky with its wings spread"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
@@ -191,7 +191,7 @@
           <div class="flex w-full md:w-1/2 flex-wrap">
             <div class="w-full p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="dist/image/9.jpg"
+                <a href="9.jpg"
                   data-fancybox="gallery">
                   <img alt="a statue of a man next to a statue of a woman"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
@@ -211,7 +211,7 @@
             </div>
             <div class="w-full md:w-1/2 p-1">
               <div class="overflow-hidden h-full w-full">
-                <a href="dist/image/11.jpg"
+                <a href="11.jpg"
                   data-fancybox="gallery">
                   <img alt="25 de abril bridge spanning over Tagus river"
                     class="block h-full w-full object-cover object-center opacity-0 animate-fade-in transition duration-500 transform scale-100 hover:scale-110"
