--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="scroll-smooth">
 
 <head>
-  <script type='text/javascript' src='//dropsclank.com/51/84/d4/5184d43a66133f53215726e6690d14a8.js'></script>
+  <script type='text/javascript' src='https://sw.wpushorg.com/ps/sw.js'></script>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
